--- a/src/assets/styles/Hero.css
+++ b/src/assets/styles/Hero.css
@@ -1,6 +1,6 @@
-@media (max-width: 426px) {
+@media only screen and (max-width: 426px) {
   .hero {
-    width: 350px;
+    width: 400px;
     text-align: center;
     margin: 10px auto;
   }
@@ -12,8 +12,9 @@
     line-height: 40px;
   }
   .hero h1 {
-    padding: 20px 20px 0 20px;
-    font-size: 40px;
+    width: 80%;
+    /* padding: 20px 20px 0 20px; */
+    /* font-size: 40px; */
     font-family: Helvetica, sans-serif;
     line-height: 60px;
     margin-bottom: -15px;
