--- a/src/assets/styles/Cardform.css
+++ b/src/assets/styles/Cardform.css
@@ -1,6 +1,5 @@
 @media (max-width: 426px) {
 
-    
 .cardform{
     width: 90%;
     margin: 10px auto;
@@ -28,7 +27,6 @@
 .res{
     display: flex;
     justify-content: space-between;
-    /* height: 50px; */
     background-color: #fff;
     border-radius: 10px;
     padding: 0 20px;
@@ -52,15 +50,12 @@
    color: #8456EC; 
 }
 .event-text h4, .event-text p{
-    line-height: 5px;
-    
+    line-height: 5px;   
 }
 
 .btn{
     width: 100%;
     background: -webkit-linear-gradient(#8456ec, #e87bf8);
-    /* -webkit-background-clip: text; */
-    /* -webkit-text-fill-color: transparent; */
     color: #fff;
     padding: 10px;
     border-radius: 10px;
@@ -70,8 +65,6 @@
 }
 
 @media (max-width: 769px) {
-
-    
     .cardform{
         width: 90%;
         margin: 10px auto;
@@ -129,8 +122,6 @@
     .btn{
         width: 100%;
         background: -webkit-linear-gradient(#8456ec, #e87bf8);
-        /* -webkit-background-clip: text; */
-        /* -webkit-text-fill-color: transparent; */
         color: #fff;
         padding: 20px 0;
         border-radius: 10px;
@@ -141,8 +132,6 @@
     }
 
     @media (min-width: 970px) {
-
-    
         .cardform{
             width: 60%;
             margin: 10px auto;
@@ -150,6 +139,8 @@
         
         .card img{
             width: 100%;
+        border-radius: 15px 15px 0 0px;
+
         }
         
         .movie{
@@ -165,7 +156,6 @@
         .res{
             display: flex;
             justify-content: space-between;
-            /* height: 50px; */
             background-color: #fff;
             border-radius: 10px;
             padding: 0 20px;
@@ -191,7 +181,6 @@
         }
         .event-text h4, .event-text p{
             line-height: 15px;
-            
         }
         
         .btn{
