--- a/src/assets/styles/Hero.css
+++ b/src/assets/styles/Hero.css
@@ -59,6 +59,7 @@
       display: flex;
       flex-direction: row-reverse;
       justify-content: space-around;
+      height: 100vh;
     }
     .hero {
       width: 60%;
